# oneflow-mlu

./: .gitignore  CMakeLists.txt  README.md  core_1679113873_pid_3554356_mluid_0_queue_d24.cndump  core_1679123588_pid_1319479_mluid_0_queue_d64.cndump  core_1679123655_pid_1332895_mluid_0_queue_d66.cndump  setup.py
cmake/: glog.cmake  (+4 more)
oneflow/cambricon/: CMakeLists.txt
oneflow/cambricon/bang/: bang_internal.h  bang_kernels.h  common_util.h  fast_gelu_grad.mlu  gather.mlu  multi_reduce_sum_pow_abs_kernel.mlu  relu.mlu  scalar_pow_grad.mlu  tanh_grad.mlu
oneflow/cambricon/cmake/: mlu.cmake
oneflow/cambricon/cnnl/: cnnl_common_descriptor.cpp  cnnl_executor.h  cnnl_op_descriptor.cpp  cnnl_op_descriptor.h  cnnl_tensor_descriptor.cpp  cnnl_tensor_descriptor.h  cnnl_types.cpp  cnnl_types.h  cnnl_workspace.cpp  cnnl_workspace.h
oneflow/cambricon/collective_boxing/: cncl_executor_backend.cpp  cncl_executor_backend.h
oneflow/cambricon/collective_communication/: cncl_executor_backend.cpp  cncl_util.h  eager_cncl_comm_manager.cpp  eager_cncl_comm_manager.h  mlu_all_gather.cpp  mlu_broadcast.cpp  mlu_recv.cpp  mlu_send.cpp
oneflow/cambricon/common/: mlu_guard.cpp  mlu_util.cpp  mlu_util.h
oneflow/cambricon/ep/: cncl_util.cpp  cncl_util.h  eager_cncl_comm_manager.cpp  eager_cncl_comm_manager.h  mlu_device.cpp  mlu_device_manager.h  mlu_random_generator.cpp  mlu_random_generator.h  mlu_stream.cpp  mlu_stream.h
oneflow/cambricon/kernels/: activation_kernel.cpp  adam_update_kernel.cpp  adam_update_kernel_util.h  adam_update_kernel_util.mlu  adaptive_avg_max_pool_kernel.cpp  adaptive_avg_pool_kernel.cpp  adaptive_max_pool_kernel.cpp  add_n_kernel.cpp  add_n_kernel_mlu.cpp  arange_kernel.cpp  argmax_kernel.cpp  avg_pooling_kernel.cpp  broadcast_add_kernel.cpp  broadcast_div_grad_kernel.cpp  broadcast_div_kernel.cpp  broadcast_kernels.cpp  broadcast_like_kernel.cpp  cast_kernel.cpp  clip_by_value_kernel.cpp  concat_kernel.cpp  constant_kernel.cpp  conv_kernel.cpp  dim_gather.cpp  div_kernel.cpp  dropout_kernel.cpp  expand.cpp  gather.cpp  gather_nd.cpp  gelu_kernel.cpp  group_norm_kernel.cpp  l1_l2_regularize_gradient.cpp  l2_normalize_kernel.cpp  layer_norm_kernel.cpp  layernorm_kernel.cpp  log_softmax_kernel.cpp  math_kernel.cpp  matmul_kernels.cpp  max_pooling_kernel.cpp  model_update_kernels.cpp  multi_reduce_kernels.cpp  (+20 more)
oneflow/cambricon/mlu/: mlu_tools.cpp  mlu_tools.h  public.cpp  public.h
oneflow/opencl/: CMakeLists.txt
oneflow/opencl/common/: .cl_api.h.swp  cl_api.cpp  cl_api.h  cl_context.cpp  cl_context.h  cl_guard.cpp  cl_guard.h  cl_kernel_pool.h  cl_util.h
oneflow_mlu/: CMakeLists.txt
oneflow_mlu/bang/: adam_update.mlu  bang_kernels.h  fast_gelu.mlu  fast_gelu_grad.mlu  gather.mlu  memset.mlu  momentum_update.mlu  multi_count_not_finite.mlu  multi_reduce_sum_pow_abs.mlu  regularize_gradient.mlu  scalar_pow_grad.mlu  sqrt_sqaure_sum.mlu  unsorted_segment_sum.mlu
oneflow_mlu/cnnl/: cnnl_common_descriptor.cpp  cnnl_common_descriptor.h  cnnl_op_descriptor.cpp  cnnl_op_descriptor.h  cnnl_tensor_descriptor.cpp  cnnl_tensor_descriptor.h  cnnl_types.cpp  cnnl_workspace.cpp  cnnl_workspace.h
oneflow_mlu/collective_communication/: cncl_executor_backend.cpp  cncl_util.cpp  eager_cncl_comm_manager.cpp  eager_cncl_comm_manager.h  mlu_all_gather.cpp  mlu_all_reduce.cpp  mlu_broadcast.cpp  mlu_communication_context.cpp  mlu_communication_context.h  mlu_recv.cpp  mlu_reduce.cpp  mlu_reduce_scatter.cpp  mlu_send.cpp  mlu_send_recv_util.cpp  mlu_send_recv_util.h
oneflow_mlu/common/: mlu_guard.cpp
oneflow_mlu/ep/: mlu_device.cpp  mlu_device.h  mlu_device_manager.cpp  mlu_device_manager_factory.cpp  mlu_event.cpp  mlu_event.h  mlu_random_generator.cpp  mlu_random_generator.h  mlu_stream.cpp  mlu_stream.h
oneflow_mlu/graph/: mlu_stream_context.cpp
oneflow_mlu/kernels/: activation_kernel.cpp  adam_update_kernel.cpp  adaptive_avg_pool_kernel.cpp  adaptive_max_pool_kernel.cpp  add_n_kernel.cpp  arange_kernel.cpp  argmax_kernel.cpp  avg_pooling_kernel.cpp  broadcast_div_grad_kernel.cpp  broadcast_like_kernel.cpp  cast_kernel.cpp  clip_by_value_kernel.cpp  conv_kernel.cpp  dim_gather.cpp  dim_scatter_kernels.cpp  dropout_kernel.cpp  expand.cpp  gather.cpp  l1_l2_regularize_gradient.cpp  layer_norm_kernel.cpp  log_softmax_kernel.cpp  max_pooling_kernel.cpp  mlu_check_numerics_kernel_observer.cpp  momentum_update.cpp  multi_count_not_finite_kernel.cpp  multi_reduce_kernels.cpp  nll_loss_kernel.cpp  normalization_add_relu_kernel.cpp  normalization_kernel.cpp  random_mask_like_kernel.cpp  reduce_kernel.cpp  reduce_sum_like_kernel.cpp  scalar_pow_grad_kernel.cpp  slice_kernel.cpp  slice_util.cpp  softmax_kernel.cpp  sparse_softmax_cross_entropy_kernel.cpp  sqrt_square_sum_kernel.cpp  to_contiguous_kernel.cpp  topk_kernel.cpp  (+1 more)
oneflow_mlu/python/: CMakeLists.txt  stub.cpp
(+246 files in other folders)
